force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Discount_incl_Partner_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_incl_Partner_Amt__c</fullName>
    <formula>IF(SBQQ__Bundled__c, 0,
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; NOT(SBQQ__Existing__c), (SBQQ__ProratedListPrice__c * SBQQ__Quantity__c - SBQQ__PartnerPrice__c),
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; SBQQ__Existing__c, (SBQQ__ProratedListPrice__c * (SBQQ__Quantity__c-SBQQ__PriorQuantity__c) - SBQQ__PartnerPrice__c),
(SBQQ__ProratedListPrice__c - SBQQ__PartnerPrice__c) * SBQQ__EffectiveQuantity__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount incl. Partner (Amt.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>