force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Upgrade_Sub_PRM__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Sub_PRM__c</fullName>
    <description>Use as a temporary fix until we get the new Price Rule in place to make amendments.</description>
    <label>Upgraded Sub PRM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>