force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Upgraded_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Upgraded_Subscription_ID__c</fullName>
    <formula>SBQQ__UpgradedSubscription__r.Subscription_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upgraded Subscription ID</label>
    <type>Text</type>
</CustomField>