force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Upgraded_Subscription_Special_Price__c.field-meta.xml
<CustomField>
    <fullName>Upgraded_Subscription_Special_Price__c</fullName>
    <formula>SBQQ__UpgradedSubscription__r.Subscription_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upgraded Subscription - ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>