force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Upgraded_Subscription_Terminated_Date__c.field-meta.xml
<CustomField>
    <fullName>Upgraded_Subscription_Terminated_Date__c</fullName>
    <formula>SBQQ__UpgradedSubscription__r.SBQQ__TerminatedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upgraded Subscription Terminated Date</label>
    <type>Date</type>
</CustomField>