force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Yearly_Order_Value_3_Year_Discount__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Order_Value_3_Year_Discount__c</fullName>
    <formula>Yearly_Order_Value__c * 0.9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Order Value (3 Year Discount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>