force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Yearly_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Order_Value__c</fullName>
    <formula>SBQQ__CustomerTotal__c / SBQQ__ProrateMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the 12 month value of a deal, regardless of subscription term.</inlineHelpText>
    <label>Customer Yearly Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>