force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Yearly_Order_Value_incl_Partner_Discoun__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Order_Value_incl_Partner_Discoun__c</fullName>
    <formula>SBQQ__NetTotal__c / SBQQ__ProrateMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Yearly Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>