force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/Custom_Quote_Line_layout.recordType-meta.xml
<RecordType>
    <fullName>Custom_Quote_Line_layout</fullName>
    <active>true</active>
    <description>Custom quote line: when Start and End date are selected, Terms is automatically calculated.</description>
    <label>Custom Quote Line layout</label>
</RecordType>