force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/Standard_Quote_Line_layout.recordType-meta.xml
<RecordType>
    <fullName>Standard_Quote_Line_layout</fullName>
    <active>true</active>
    <description>Standard Quote Lines : same Start, End Date &amp; Terms</description>
    <label>Standard Quote Line layout</label>
</RecordType>