force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SBQQ__Quote__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <columns>SBQQ__PricingMethodEditable__c</columns>
    <columns>Clio_MinimumPrice__c</columns>
    <columns>Opportunity_Stage_QL__c</columns>
    <columns>Opportunity_Type_QL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>