force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/Deal_Desk_Mass_Quote_Line_Updates_CB.listView-meta.xml
<ListView>
    <fullName>Deal_Desk_Mass_Quote_Line_Updates_CB</fullName>
    <columns>SBQQ__Quote__c</columns>
    <columns>SBQQ__Group__c</columns>
    <columns>SBQQ__ProductName__c</columns>
    <columns>Type__c</columns>
    <columns>SBQQ__RenewedSubscription__c</columns>
    <columns>SBQQ__Quantity__c</columns>
    <columns>NAME</columns>
    <columns>SBQQ__SpecialPrice__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>Start_Date_for_Template__c</columns>
    <columns>End_Date_for_template__c</columns>
    <columns>SBQQ__TotalDiscountAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SBQQ__QuoteLine__c.Standard_Quote_Line_layout</value>
    </filters>
    <filters>
        <field>SBQQ__Quote__c</field>
        <operation>equals</operation>
        <value>Q-42071</value>
    </filters>
    <label>Deal Desk - Mass Quote Line Updates - CB</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>