force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/Maintenance_Renewal_Upsale.listView-meta.xml
<ListView>
    <fullName>Maintenance_Renewal_Upsale</fullName>
    <columns>SBQQ__ProductName__c</columns>
    <columns>NAME</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>Type__c</columns>
    <columns>SBQQ__RenewedSubscription__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Type_QL__c</field>
        <operation>equals</operation>
        <value>Renewal + Upsale</value>
    </filters>
    <filters>
        <field>Opportunity_Stage_QL__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>SBQQ__RenewedSubscription__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Customer_ACV__c</field>
        <operation>greaterThan</operation>
        <value>DKK 0</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>SBQQ__Quote__c</field>
        <operation>equals</operation>
        <value>Q-15914</value>
    </filters>
    <label>Maintenance - Renewal &amp; Upsale</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>