force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/Maintenance_Renewed_Subs_no_Renew_Date.listView-meta.xml
<ListView>
    <fullName>Maintenance_Renewed_Subs_no_Renew_Date</fullName>
    <columns>SBQQ__ProductName__c</columns>
    <columns>NAME</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>Type__c</columns>
    <columns>Start_Date_for_Template__c</columns>
    <columns>SBQQ__RenewedSubscription__c</columns>
    <columns>Renewed_Subscription_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Stage_QL__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>SBQQ__RenewedSubscription__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SBQQ__QuoteLine__c.Standard_Quote_Line_layout</value>
    </filters>
    <filters>
        <field>Renewed_Subscription_Renewed_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>SBQQ__Quote__c</field>
        <operation>equals</operation>
        <value>Q-15914</value>
    </filters>
    <label>Maintenance - Renewed Subs no Renew Date</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>